8 April 2014: Wouter
	- Patch for dnssec-trigger-script.in --async flag from Pavel Simerda,
	  stops dnssec-trigger-script to block on networkmanager, which is
	  good in cases when networkmanager blocks on the script.

28 March 2014: Wouter
	- Patch from Pavel Simerda that incorporates contrib items into
	  the build install system.  Systemd scripts, dnssec-trigger-script,
	  dnssec.conf.

24 March 2014: Wouter
	- Renamed 01-dnssec-trigger-hook to 01-dnssec-trigger with the
	  networkmanager naming scheme.  (From Pavel Simerda).
	- put contrib/01-dnssec-trigger into 01-dnssec-trigger.in

24 March 2014: Wouter
	- Removed files obsoleted by patch from Pavel Simerda:
	  contrib/01-dnssec-trigger-hook-new_nm
	  (replaced with dnssec-trigger-script and 01-dnssec-trigger)
	  fedora/dnssec-triggerd.service
	  (new version in contrib)
	  fedora/dnssec-triggerd-resolvconf-handle.service
	  (handled by dnssec-triggerd.service directly)
	  fedora/dnssec-trigger.spec
	  (spec files are maintained separately)
	  fedora/dnssec-triggerd-keygen.service
	  (new version in contrib)
	  fedora/dnssec-triggerd-resolvconf-handle.sh
	  (handled by dnssec-trigger-script directly)
	  fedora/dnssec-triggerd.init
	  (only used in epel6 which hasn't been updated for ages)

21 March 2014: Wouter
	- Patch from Pavel Simerda: better integration with NetworkManager and
	  distributions, added in contrib.

13 February 2014: Wouter
	- Patches from Tomass Hozza; Explicitly-use-Python2-interpreter,
	  Fix-situation-when-connection-is-going-down,
	  resolv.conf-backup-script-restart-NM-to-handle-resolv.conf,
	  Update-systemd-service-files-to-latest-version-used.

7 February 2014: Wouter
	- Fix #551: Change Regents to Copyright holder in License.

28 January 2014: Wouter
	- Added patch to networkmanager dispatcher script and also
	  an example dnssec.conf file from Tomas Hozza.

21 January 2014: Wouter
	- Added contrib networkmanager dispatcher script from Tomas Hozza.

25 November 2013: Wouter